package com.housemate.shared.enums;

public enum ChoreStatus{
    PENDING,
    COMPLETED,
    OVERDUE
}
